bee-common/bee-packable-derive/tests/fail/incorrect_tag_enum.stderr
error[E0308]: mismatched types
  --> tests/fail/incorrect_tag_enum.rs:14:22
   |
14 |     #[packable(tag = 0u32)]
   |                      ^^^^ expected `u8`, found `u32`
   |
help: change the type of the numeric literal from `u32` to `u8`
   |
14 |     #[packable(tag = 0u8)]
   |                      ~~~
